base-installer (1.42) UNRELEASED; urgency=low

  [ Frans Pop ]
  * Fix typo in template names.

  [ Colin Watson ]
  * If an initramfs generator fails to install and we're installing sarge,
    then attempt to fall back to initrd-tools (closes: #344371).

  [ Frans Pop ]
  * Alternative solution for falling back to initrd-tools for sarge installs.

 -- Frans Pop <fjp@debian.org>  Fri,  6 Jan 2006 22:30:10 +0100

base-installer (1.41) unstable; urgency=low

  [ Frans Pop ]
  * Add support for different initramfs generators, allowing different
    defaults per architecture. If there are multiple values, allow the
    user to select one (depending on priority).
  * Enable initramfs generation for hppa.

  [ Joey Hess ]
  * Rework initramfs templates, remove the clumsy "initramfs initrd"
    construct; the fact that it's an initramfs is essentially an
    implementation detail that users do not need to worry about.

  [ Updated translations ]
  * Catalan (ca.po) by Guillem Jover
  * Czech (cs.po) by Miroslav Kure
  * Danish (da.po) by Claus Hindsgaul
  * German (de.po) by Jens Seidel
  * Greek, Modern (1453-) (el.po) by quad-nrg.net
  * Spanish (es.po) by Javier Fernández-Sanguino Peña
  * Finnish (fi.po) by Tapio Lehtonen
  * French (fr.po) by Christian Perrier
  * Galician (gl.po) by Jacobo Tarrio
  * Indonesian (id.po) by Parlin Imanuel Toh
  * Italian (it.po) by Giuseppe Sacco
  * Japanese (ja.po) by Kenshi Muto
  * Kazakh (kk.po) by Talgat Daniyarov
  * Korean (ko.po) by Sunjae park
  * Lithuanian (lt.po) by Kęstutis Biliūnas
  * Bokmål, Norwegian (nb.po) by Bjørn Steensrud
  * Dutch (nl.po) by Frans Pop
  * Polish (pl.po) by Bartosz Fenski
  * Portuguese (pt.po) by Miguel Figueiredo
  * Russian (ru.po) by Yuri Kozlov
  * Slovak (sk.po) by Peter Mann
  * Swedish (sv.po) by Daniel Nylander
  * Tagalog (tl.po) by Eric Pareja

 -- Frans Pop <fjp@debian.org>  Fri, 30 Dec 2005 13:30:01 +0100

base-installer (1.40) unstable; urgency=low

  [ Frans Pop ]