@@ -8,6 +8,7 @@ kernel-2.4 \
   kernel-image-2.4-386
 kernel-2.6 \
   linux-image-2.6-686 \
+  linux-image-2.6-486 \
   linux-image-2.6-386
 usable \
   kernel-image-2.4-386 \
@@ -19,14 +20,15 @@ usable \
   kernel-image-2.4.27-2-686-smp \
   kernel-image-2.4.27-2-686 \
   linux-image-2.6-386 \
+  linux-image-2.6-486 \
   linux-image-2.6-686-smp \
   linux-image-2.6-686 \
   kernel-image-2.6.8-2-386 \
   kernel-image-2.6.8-2-686-smp \
   kernel-image-2.6.8-2-686 \
-  linux-image-2.6.12-1-386 \
-  linux-image-2.6.12-1-686-smp \
-  linux-image-2.6.12-1-686
+  linux-image-2.6.15-1-486 \
+  linux-image-2.6.15-1-686-smp \
+  linux-image-2.6.15-1-686
 unusable \
   kernel-image-2.4-k6 \
   kernel-image-2.4-k7-smp \
@@ -35,10 +37,10 @@ unusable \
   kernel-image-2.4.27-2-k7-smp \
   kernel-image-2.4.27-2-k7 \
   kernel-image-2.6-k7-smp \
-  linux-image-2.6-k7-smp \
   kernel-image-2.6-k7 \
-  linux-image-2.6-k7 \
   kernel-image-2.6.8-2-k7-smp \
   kernel-image-2.6.8-2-k7 \
-  linux-image-2.6.12-1-k7-smp \
-  linux-image-2.6.12-1-k7
+  linux-image-2.6-k7-smp \
+  linux-image-2.6-k7 \
+  linux-image-2.6.15-1-k7-smp \
+  linux-image-2.6.15-1-k7
